[gd_scene load_steps=15 format=3 uid="uid://fq5dp2qgnmpk"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_m74cc"]
[ext_resource type="PackedScene" uid="uid://wpkhmmw6g8du" path="res://assets/player/Plushi_animated_v9.tscn" id="2_25k8p"]
[ext_resource type="AudioStream" uid="uid://damtimpqkew1b" path="res://sound/vfx/game/cat/jump01.wav" id="3_i1rh7"]
[ext_resource type="AudioStream" uid="uid://b2xmv21415xct" path="res://sound/vfx/game/cat/step02ver2.wav" id="4_m0vvn"]
[ext_resource type="AudioStream" uid="uid://dhmy35re6wcmi" path="res://sound/vfx/game/cat/throw01.wav" id="5_trgng"]
[ext_resource type="AudioStream" uid="uid://crcf1xwpdimvv" path="res://sound/vfx/game/cat/collect01.wav" id="6_ci8y1"]
[ext_resource type="FontFile" uid="uid://c0b0pel4je3qu" path="res://assets/Crunch Chips.otf" id="6_lr5hm"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_eihsu"]
radius = 0.334311
height = 1.8

[sub_resource type="SphereShape3D" id="SphereShape3D_3nq4d"]
radius = 1.5

[sub_resource type="Animation" id="Animation_gekqx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("detact_mouse/CollisionShape3D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_g4wt3"]
resource_name = "on_pickup"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pickedup:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pickedup:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 2.2, 1.2), Vector3(0, 3, 1.2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pickedup:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1.5, 1.5, 1.5)]
}

[sub_resource type="Animation" id="Animation_1p83g"]
resource_name = "on_pickup_full"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pickedup:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.392157, 0, 0, 1), Color(0.392157, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pickedup:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 2.2, 1.2), Vector3(0, 3, 1.2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pickedup:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1.5, 1.5, 1.5)]
}

[sub_resource type="Animation" id="Animation_3qg7d"]
resource_name = "on_shoot"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("detact_mouse/CollisionShape3D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:is_shooting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vt86w"]
_data = {
"RESET": SubResource("Animation_gekqx"),
"on_pickup": SubResource("Animation_g4wt3"),
"on_pickup_full": SubResource("Animation_1p83g"),
"on_shoot": SubResource("Animation_3qg7d")
}

[node name="player" type="CharacterBody3D" groups=["player"]]
collision_layer = 2
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource("1_m74cc")

[node name="Plueshi" parent="." instance=ExtResource("2_25k8p")]
transform = Transform3D(1.255, 0, 0, 0, 1.255, 0, 0, 0, 1.255, 0, 1.255, 0)

[node name="Skeleton3D" parent="Plueshi/Armature" index="0"]
bones/0/position = Vector3(3.63797e-19, -0.969695, 0.000819231)
bones/0/scale = Vector3(1, 1, 1)
bones/1/position = Vector3(-0.00108881, -0.00364208, -0.269516)
bones/3/rotation = Quaternion(0, 3.64563e-18, 4.37324e-31, 1)
bones/4/rotation = Quaternion(0, 0, -1.03067e-32, 1)
bones/5/rotation = Quaternion(2.0829e-10, 3.97887e-34, -1.57097e-24, 1)
bones/6/position = Vector3(0.650032, 0.0726621, -6.51029e-08)
bones/7/position = Vector3(0.832173, 0.119397, 0.0383431)
bones/9/position = Vector3(0.0614949, 0.183494, 1.02317e-10)
bones/9/rotation = Quaternion(-1.28793e-07, -4.48545e-08, -0.840832, 0.541297)
bones/10/position = Vector3(0.0354593, 0.184732, -7.08615e-09)
bones/10/rotation = Quaternion(-5.07453e-08, 1.61588e-07, -0.266492, 0.963837)
bones/11/rotation = Quaternion(-1.0273e-08, -1.94598e-08, -0.0886563, 0.996062)
bones/12/rotation = Quaternion(-1.25297e-08, -1.53014e-14, -0.138224, 0.990401)
bones/13/position = Vector3(-0.0593173, 0.183494, 1.02311e-10)
bones/13/rotation = Quaternion(-1.25896e-07, 4.54248e-08, 0.849017, 0.528366)
bones/14/position = Vector3(-0.0354593, 0.184732, -6.96163e-09)
bones/14/rotation = Quaternion(5.40688e-09, -1.72674e-07, 0.262236, 0.965004)
bones/15/rotation = Quaternion(-4.34214e-09, 3.16286e-08, 0.097284, 0.995257)
bones/16/rotation = Quaternion(-3.52427e-09, 1.1639e-08, 0.105736, 0.994394)
bones/17/rotation = Quaternion(0.705032, 0.657148, -0.195035, 0.181788)
bones/18/rotation = Quaternion(0.526879, -0.4418, 0.422416, 0.590572)
bones/18/scale = Vector3(1, 1, 1)
bones/19/rotation = Quaternion(0.0316782, -0.0385894, -0.257638, 0.964951)
bones/19/scale = Vector3(1, 1, 1)
bones/20/rotation = Quaternion(0.752779, -0.658067, 0.00563568, 0.0155231)
bones/21/rotation = Quaternion(-0.77602, 7.51951e-08, -9.2646e-08, 0.630708)
bones/22/rotation = Quaternion(-0.0235575, 9.98784e-15, -5.6205e-09, 0.999722)
bones/23/rotation = Quaternion(0.0714662, -7.79148e-15, 1.70508e-08, 0.997443)
bones/24/rotation = Quaternion(0.160354, -1.12478e-14, 3.82582e-08, 0.98706)
bones/25/rotation = Quaternion(0.0319203, 7.09517e-15, 7.61575e-09, 0.99949)
bones/26/rotation = Quaternion(0.0587221, 2.18536e-14, 1.40103e-08, 0.998274)
bones/27/rotation = Quaternion(-0.249493, -1.74265e-14, -5.95255e-08, 0.968377)
bones/28/rotation = Quaternion(0.705032, -0.657148, 0.195035, 0.181788)
bones/29/rotation = Quaternion(0.526879, 0.4418, -0.422416, 0.590572)
bones/29/scale = Vector3(1, 1, 1)
bones/30/rotation = Quaternion(0.0316782, 0.0385894, 0.257638, 0.964951)
bones/30/scale = Vector3(1, 1, 1)
bones/31/rotation = Quaternion(0.752779, 0.658067, -0.00563568, 0.0155231)
bones/32/position = Vector3(0.159623, -0.965914, -0.0140459)
bones/32/scale = Vector3(1, 1, 1)
bones/33/position = Vector3(0.160073, -0.792549, 0.313029)
bones/33/scale = Vector3(1, 1, 1)
bones/34/position = Vector3(-0.159623, -0.965914, -0.0140459)
bones/34/scale = Vector3(1, 1, 1)
bones/35/position = Vector3(-0.160073, -0.792549, 0.313029)
bones/35/scale = Vector3(1, 1, 1)

[node name="bow" parent="Plueshi/Armature/Skeleton3D" index="0"]
blend_shapes/>.< = 0.0

[node name="wool_spawn" type="Marker3D" parent="Plueshi"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.280684, 0.263054)

[node name="mouse_position" type="Marker3D" parent="Plueshi"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.6482, -0.44597)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.896296, 0)
shape = SubResource("CapsuleShape3D_eihsu")

[node name="coyote" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="detact_mouse" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="detact_mouse"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00012207, 0.886871, 0)
shape = SubResource("SphereShape3D_3nq4d")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vt86w")
}

[node name="ceiling_checker" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.79346, 0)
target_position = Vector3(0, 0.2, 0)

[node name="landing_checker" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00600901, 0)
target_position = Vector3(0, -0.2, 0)

[node name="jump_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_i1rh7")
volume_db = -10.0

[node name="walk_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_m0vvn")
volume_db = 2.0

[node name="shoot_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_trgng")
volume_db = -6.0

[node name="pickup_sound1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ci8y1")
volume_db = -4.0

[node name="pickup_sound2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ci8y1")
volume_db = -4.0
pitch_scale = 1.2

[node name="pickup_sound3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ci8y1")
volume_db = -4.0
pitch_scale = 1.4

[node name="pickup_sound_deny" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ci8y1")
volume_db = 2.0
pitch_scale = 0.56

[node name="pickedup" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2, 1.2)
modulate = Color(1, 1, 1, 0)
text = "0/3"
font = ExtResource("6_lr5hm")
font_size = 80
outline_size = 0

[node name="vfx_cooldown" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="coyote" to="." method="_on_coyote_timeout"]
[connection signal="body_entered" from="detact_mouse" to="." method="_on_detact_mouse_body_entered"]

[editable path="Plueshi"]
